# english-tts

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  todo.md  需求.md
apps/backend/: .env.example  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
apps/backend/app/: __init__.py  cache.py  database.py  main.py  models.py  schemas.py  security.py
apps/backend/app/routers/: ai.py  auth.py  books.py  lessons.py  notes.py  reviews.py  tts.py
apps/backend/app/services/: llm.py  tts.py
apps/frontend/: index.html  package.json  uno.config.ts  vite.config.ts
apps/frontend/src/: App.vue  main.ts
apps/frontend/src/api/: client.ts
apps/frontend/src/components/ai/: FloatingTutor.vue
apps/frontend/src/components/audio/: AudioPlayer.vue  DialogueList.vue  LinePlayer.vue  index.ts
apps/frontend/src/components/editor/: TiptapEditor.vue
apps/frontend/src/components/ui/: BookCardSkeleton.vue  Button.vue  (+5 more)
apps/frontend/src/composables/: useSpeechRecognition.ts
apps/frontend/src/data/: onboarding.ts
apps/frontend/src/lib/: colors.ts  http.ts  schemas.ts  utils.ts
apps/frontend/src/router/: index.ts
apps/frontend/src/stores/: auth.ts  learning.ts  player.ts  review.ts  session.ts
apps/frontend/src/types/: ai.ts  auth.ts  onboarding.ts  review.ts
apps/frontend/src/utils/: markdown.ts
apps/frontend/src/views/: BookDetailView.vue  BookListView.vue  DailyLearningView.vue  DashboardView.vue  LessonDetailView.vue  LoginView.vue  NotFoundView.vue  NoteEditView.vue  NoteListView.vue  NoteView.vue  ReviewView.vue
(+3 files in other folders)
