[project]
name = "english-tts-backend"
version = "2.0.0"
description = "FastAPI + edge-tts 英文学习平台 API，使用 SQLite + Redis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "redis>=5.0.0",
    "edge-tts>=7.0.0",
    "pydub>=0.25.0",
    "python-multipart>=0.0.9",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

# Ruff 配置
[tool.ruff]
target-version = "py311"  # Python 3.11
line-length = 100
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "**/.*/**",
    "**/node_modules",
    "data",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort (import 排序)
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (由 formatter 处理)
    "B008",   # FastAPI Depends 在默认参数中是标准用法
    "ASYNC240",  # pathlib 在同步代码中是可以接受的
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
